package com.malakiapps.notes.utils

object TestTags {
    const val NOTE_TITLE_TEXT_FIELD = "note-title"
    const val NOTE_BODY_TEXT_FIELD = "note-body-text-field"
    const val HOME_NOTE_INSTANCE_ITEM = "home-note-instance-item"
    const val NOTE_INSTANCE_CHARACTER_COUNT = "note-instance-character-count"
}